src/gctools/alloc
-*- mode: compilation; default-directory: "~/Development/cando/clasp/src/gctools/" -*-
Compilation started at Sat May 10 01:19:26

bjam -j$PJOBS bundle debug
core dir = ../../src/core
Scraping in ../../src/core
No changes found
link.jam: No such file or directory
Scraping in ../../src/llvmo
No changes found
Scraping in ../../src/gctools
No changes found
Scraping in ../../src/asttooling
No changes found
Scraping in ../../src/cffi
No changes found
Scraping in ../../src/mpip
No changes found
Scraping in ../../src/sockets
No changes found
Scraping in ../../src/clbind
No changes found
Scraping in ../../src/serveEvent
No changes found
...patience...
...patience...
...patience...
...found 3429 targets...
...updating 6 targets...
cando.register-classes ../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off/gctools_initClasses_inc.h
clang-darwin.compile.c++ ../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off/memoryManagement.o
In file included from ../../src/gctools/memoryManagement.cc:3:
In file included from ../../src/core/foundation.h:573:
In file included from ../../src/gctools/memoryManagement.h:203:
In file included from ../../src/gctools/containers.h:30:
../../src/gctools/gcarray.h:105:31: error: unknown type name 'impl_type'; did you mean 'my_type'?
            new (implAddress) impl_type();
                              ^~~~~~~~~
                              my_type
../../src/gctools/gcarray.h:48:51: note: 'my_type' declared here
        typedef GCArray<T,Allocator>              my_type;
                                                  ^
1 error generated.

    "clang++" -x c++ -O0 -g -Wno-c++11-extensions -Wno-deprecated-register -mmacosx-version-min=10.7 -fvisibility=default -Wno-unused-variable -std=c++11 -stdlib=libc++ -DDEBUG_ASSERTS -DDONT_USE_MPS -DEXPAT -DINCLUDED_FROM_CLASP -DINHERITED_FROM_SRC -DREADLINE -DUSE_GCVECTOR_MALLOC_ALLOCATOR -D_ADDRESS_MODEL_64 -D_DEBUG -D_DEBUG_BUILD -D_GNU_SOURCE -D_TARGET_OS_DARWIN -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -I"../../src" -I"../../src/cffi/bin/clang-darwin-4.2.1/debug/link-static/mps-off" -I"../../src/core/bin/clang-darwin-4.2.1/debug/link-static/mps-off" -I"../../src/gctools" -I"../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off" -I"../../src/llvmo/bin/clang-darwin-4.2.1/debug/link-static/mps-off" -I"/Library/Frameworks/EPD64.framework/Versions/7.2/include/python2.7" -I"/Users/meister/Development/cando/clasp/build/cando.app/Contents/Resources/externals/common/include" -I"/Users/meister/Development/cando/clasp/build/cando.app/Contents/Resources/externals/release/include" -I"/Users/meister/Development/cando/clasp/externals/src/mps-kit-1.111.0/code" -c -o "../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off/memoryManagement.o" "../../src/gctools/memoryManagement.cc"

...failed clang-darwin.compile.c++ ../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off/memoryManagement.o...
clang-darwin.compile.c++ ../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off/gctoolsPackage.o
In file included from ../../src/gctools/gctoolsPackage.cc:5:
In file included from ../../src/core/foundation.h:573:
In file included from ../../src/gctools/memoryManagement.h:203:
In file included from ../../src/gctools/containers.h:30:
../../src/gctools/gcarray.h:105:31: error: unknown type name 'impl_type'; did you mean 'my_type'?
            new (implAddress) impl_type();
                              ^~~~~~~~~
                              my_type
../../src/gctools/gcarray.h:48:51: note: 'my_type' declared here
        typedef GCArray<T,Allocator>              my_type;
                                                  ^
1 error generated.

    "clang++" -x c++ -O0 -g -Wno-c++11-extensions -Wno-deprecated-register -mmacosx-version-min=10.7 -fvisibility=default -Wno-unused-variable -std=c++11 -stdlib=libc++ -DDEBUG_ASSERTS -DDONT_USE_MPS -DEXPAT -DINCLUDED_FROM_CLASP -DINHERITED_FROM_SRC -DREADLINE -DUSE_GCVECTOR_MALLOC_ALLOCATOR -D_ADDRESS_MODEL_64 -D_DEBUG -D_DEBUG_BUILD -D_GNU_SOURCE -D_TARGET_OS_DARWIN -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -I"../../src" -I"../../src/cffi/bin/clang-darwin-4.2.1/debug/link-static/mps-off" -I"../../src/core/bin/clang-darwin-4.2.1/debug/link-static/mps-off" -I"../../src/gctools" -I"../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off" -I"../../src/llvmo/bin/clang-darwin-4.2.1/debug/link-static/mps-off" -I"/Library/Frameworks/EPD64.framework/Versions/7.2/include/python2.7" -I"/Users/meister/Development/cando/clasp/build/cando.app/Contents/Resources/externals/common/include" -I"/Users/meister/Development/cando/clasp/build/cando.app/Contents/Resources/externals/release/include" -I"/Users/meister/Development/cando/clasp/externals/src/mps-kit-1.111.0/code" -c -o "../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off/gctoolsPackage.o" "../../src/gctools/gctoolsPackage.cc"

...failed clang-darwin.compile.c++ ../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off/gctoolsPackage.o...
...skipped <p../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off>libgctools_mpsoff_dbg.a(clean) for lack of <p../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off>gctoolsPackage.o...
...skipped <p../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off>libgctools_mpsoff_dbg.a for lack of <p../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off>gctoolsPackage.o...
...skipped <p/Users/meister/Development/cando/clasp/build/cando.app/Contents/Resources/lib>libgctools_mpsoff_dbg.a for lack of <p../../src/gctools/bin/clang-darwin-4.2.1/debug/link-static/mps-off>libgctools_mpsoff_dbg.a...
...failed updating 2 targets...
...skipped 3 targets...
...updated 1 target...

Compilation exited abnormally with code 1 at Sat May 10 01:19:33
